# Academy_ROS2

./: ...  README.md  pj.cpp
Supreme_Ruler_Of_Epicness-main/: 프로젝트_계획서(개발자양성과정).hwp
arithmetic/: CMakeLists.txt  package.xml
line_follower/: CMakeLists.txt  package.xml
line_follower/src/: line_follower.cpp
line_following_robot/: CMakeLists.txt  package.xml
line_following_robot/src/: line_following.cpp
line_following_robot/로봇 내부 launch/: hids_laser.launch.py  tb3_bringup.launch.py  tb3_publisher.launch.py
line_following_robot/로봇내부param/: burger.yaml
moveTSim/: CMakeLists.txt  package.xml
moveTSim/src/: moveTurtle.cpp  moveTurtleBot2.cpp  moveTurtleBotcpp2.cpp
move_t_sim/: CMakeLists.txt
move_t_sim/src/: canny_camera.cpp  moveTurtleBotcpp.cpp  stay_thirty.cpp
opencv/: .gitignore
opencv/ch02/: CMakeLists.txt  aprint.cpp  movewindows.cpp  windows.cpp
opencv/ch03/: CMakeLists.txt  basicOp.cpp  mapOp1.cpp  mapOp2.cpp  mapOp3.cpp  mapOp4.cpp  mapOp5.cpp  rectOp.cpp  vecOp.cpp
opencv/ch04/: A1-Q1.cpp  A1.cpp  CMakeLists.txt  drawText.cpp  fillestoregeReadTest.cpp  fillestoregeTest.cpp  keyboard.cpp  keyboard2.cpp  line.cpp  maskSetTo.cpp  mouseTEST.cpp  rectangleTEST.cpp  trackBarTest.cpp  trackBarTest2.cpp  video.cpp  vidio.cpp
opencv/ch05/: CMakeLists.txt  brightness.cpp  histogram.cpp  histogramEquailization.cpp
opencv/ch07/: CMakeLists.txt  GaussianFilter.cpp  bilateralFilter.cpp  blurr.cpp  fillter2D.cpp  shapen.cpp
opencv/ch08/: CMakeLists.txt  affine.cpp  affineRotation.cpp  card_perpectctive.cpp  perspectiveTransform.cpp
opencv/ch09/: CMakeLists.txt  canny.cpp  ch10color.cpp  ch10sinrange.cpp  ch10splitmerge.cpp  houghline.cpp  houghlineP.cpp
opencv/ch11/: CMakeLists.txt  adaptiveThreshold.cpp  casecade_ch13.cpp  hog_ch13.cpp  matching.cpp  morphologyEx.cpp  threthold.cpp
opencv/ch2/: windows.cpp
opencv/data/: output.avi
opencv/first/: helloworld.cpp
opencv/first/install/: CMakeCache.txt  Makefile  cmake_install.cmake  helloworld
project_14/: CMakeLists.txt  package.xml
project_14/src/: line_follower.cpp
simple_pkg_cpp/: CMakeLists.txt  package.xml
simple_pkg_cpp/include/simple_pkg/: publisher.hpp
simple_pkg_cpp/include/simple_pkg_cpp/: message_pub.hpp  message_sub.hpp
simple_pkg_cpp/launch/: tmpubsub.launch.py
simple_pkg_cpp/src/: helloOpenCV.cpp  helloOpenCV2.cpp  hello_publisher.cpp  hello_publisher2.cpp  hello_publisher_class2.cpp  helloworld.cpp  message_pub.cpp  message_publisher_class.cpp  message_sub.cpp  message_subscriber_class.cpp  simple_service_client.cpp  simple_service_client2.cpp  simple_service_server.cpp
topic_final/: package.xml
work-experience-doc/: 3-5. 프로젝트형 일경험 결과보고서 - 미완성.hwp  CMakeLists.txt  line_follower_node.cpp  package.xml
결과보고서/: 결과보고서.hwp
기타자료들/: 회의록_합본 파일-선생님 서명 필요.hwp
기타자료들/00.결과보고서/: 일경험 로스경험자들 결과보고서.hwp
기타자료들/work-experience-doc/초안/: 결과보고서.hwp
